--- a/src/app/components/mantener/requisito/requisito.component.html
+++ b/src/app/components/mantener/requisito/requisito.component.html
@@ -1,1 +1,56 @@
-<p>requisito works!</p>
+<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded p-button-success"
+        (click)="showDialogCreate()" style="margin-bottom: 20px;"></button>
+
+    
+
+<p-table [value]="requisitos" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
+    [rowsPerPageOptions]="[5, 10, 20]">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Descripcion</th>
+            <th>Estado</th>
+            <th>Acción</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-requisito>
+        <tr>
+            <td>{{requisito.id}}</td>
+            <td>{{requisito.nombre}}</td>
+            <td>{{requisito.descripcion}}</td>
+            <td>{{requisito.estado}}</td>
+            <td>
+                <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded"
+                    (click)="showDialogEdit(requisito.id)"></button>
+                <button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger"
+                    (click)="deleteRequisito(requisito.id)"></button>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+</div>
+
+<p-dialog header="{{titulo}}" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+    <div class="flex align-items-center gap-3 mb-3">
+        <label for="nombre" class="font-semibold w-6rem">Nombre:</label>
+        <input pInputText [(ngModel)]="requisito.nombre" name="nombre" id="nombre" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex align-items-center gap-3 mb-3">
+        <label for="nombre" class="font-semibold w-6rem">descripcion:</label>
+        <input pInputText [(ngModel)]="requisito.descripcion" name="descripcion" id="dewscripcion" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex align-items-center gap-3 mb-3">
+        <label for="nombre" class="font-semibold w-6rem">Estado:</label>
+        <input pInputText [(ngModel)]="requisito.estado" name="estado" id="estado" class="flex-auto"
+            autocomplete="off" />
+    </div>
+
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+        <p-button label="{{opc}}" (click)="opcion()" />
+    </div>
+</p-dialog>
+<p-toast />
+<p-confirmDialog />
