consultar practica con rol.obtener idusuario por token y  obtener rol por username. ojito de login arreglado

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -4,11 +4,8 @@
     <title>Iniciar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="login.component.css">
   </head>
   <body class="img js-fullheight" style="background-image: url(lima2.jpg);">
@@ -37,7 +34,7 @@
                 <div class="form-group" style="position: relative;">
                   <input 
                     id="password-field" 
-                    type="password"
+                    [type]="showPassword ? 'text' : 'password'" 
                     [(ngModel)]="credentials.password"
                     name="password"
                     class="form-control" 
@@ -45,9 +42,9 @@
                     required
                   >
                   <span 
-                    class="fa fa-fw" 
-                    [class.fa-eye]="!showPassword" 
-                    [class.fa-eye-slash]="showPassword" 
+                    class="fa fa-fw"
+                    [class.fa-eye]="!showPassword"
+                    [class.fa-eye-slash]="showPassword"
                     (click)="togglePasswordVisibility()"
                     style="cursor: pointer; position: absolute; right: 15px; top: 50%; transform: translateY(-50%);">
                   </span>
@@ -61,9 +58,5 @@
         </div>
       </div>
     </section>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
