--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-  background-image: url('../public/lima2.jpg'); /* Cambia la ruta si tu imagen está en otro lugar */
+ /* background-image: url('../public/lima2.jpg'); /* Cambia la ruta si tu imagen está en otro lugar */
   background-size: cover; /* Hace que la imagen cubra todo el fondo */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
