lo dejo en tus manos josep

--- a/src/app/features/coordinador/asignar-supervisor/asignar-supervisor-a-ppp/asignar-supervisor-a-ppp.component.html
+++ b/src/app/features/coordinador/asignar-supervisor/asignar-supervisor-a-ppp/asignar-supervisor-a-ppp.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Asignar Supervisor</h1>
   
@@ -50,4 +55,5 @@
       <p *ngIf="!errorMessage">Cargando datos...</p>
     </ng-template>
   </div>
-  
+</div>
+</div>
