--- a/src/app/features/coordinador/validar-docs/consultar-validar/consultar-docs-inicio/validar-coordinador.component.html
+++ b/src/app/features/coordinador/validar-docs/consultar-validar/consultar-docs-inicio/validar-coordinador.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Solicitud de Documentos Inicio PPP</h1>
   
@@ -43,4 +48,6 @@
       </a>
     </div>
   </div>
+</div>
+</div>
   
