--- a/src/app/features/coordinador/validar-docs/validar-docs-desarrollo/validar-docs-desarrollo.component.html
+++ b/src/app/features/coordinador/validar-docs/validar-docs-desarrollo/validar-docs-desarrollo.component.html
@@ -1,3 +1,7 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
 <div class="container">
   <h1>Solicitud Documentos Inicio PPP</h1>
   <h2>Datos Estudiante:</h2>
@@ -17,4 +21,6 @@
     <button class="aceptar" (click)="aceptar()">Aceptar</button>
     <button class="rechazar" (click)="rechazar()">Rechazar</button>
   </div>
+</div>
+</div>
 </div>
