--- a/src/app/features/sidebar/sidebar-coordinador/sidebar-coodinador.component.html
+++ b/src/app/features/sidebar/sidebar-coordinador/sidebar-coodinador.component.html
@@ -1,7 +1,7 @@
 <div [class.collapsed]="isCollapsed" class="d-flex flex-column vh-100 bg-light sidebar">
   <ul class="nav flex-column mt-3">
     <li class="nav-item" *ngFor="let item of menuItems">
-      <a class="nav-link d-flex align-items-center text-dark" href="#">
+      <a [routerLink]="item.link" class="nav-link d-flex align-items-center text-dark">
         <i [class]="item.icon + ' me-2'"></i>
         <span *ngIf="!isCollapsed">{{ item.label }}</span>
       </a>
