--- a/src/app/features/coordinador/asignar-supervisor/asignar-cronograma-a-ppp/asignar-cronograma-a-ppp.component.html
+++ b/src/app/features/coordinador/asignar-supervisor/asignar-cronograma-a-ppp/asignar-cronograma-a-ppp.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <!-- Barra de herramientas superior -->
     <div class="toolbar">
@@ -37,4 +42,6 @@
       </div>
     </div>
   </div>
+</div>
+</div>
   
