--- a/src/app/features/coordinador/asignar-supervisor/consultar-asignar/consultar-asignar.component.html
+++ b/src/app/features/coordinador/asignar-supervisor/consultar-asignar/consultar-asignar.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Asignar Supervisor</h1>
   
@@ -44,4 +49,7 @@
       </div>
     </div>
   </div>
+
+</div>
+</div>
   
