--- a/src/app/features/coordinador/crear-carta-presentacion/consultar-crear-carta/consultar-crear-carta.component.html
+++ b/src/app/features/coordinador/crear-carta-presentacion/consultar-crear-carta/consultar-crear-carta.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Solicitudes de PPP</h1>
   
@@ -31,4 +36,7 @@
       </div>
     </div>
   </div>
+
+</div>
+</div>
   
