--- a/src/app/features/coordinador/crear-carta-presentacion/crear-carta/crear-carta.component.html
+++ b/src/app/features/coordinador/crear-carta-presentacion/crear-carta/crear-carta.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Solicitud de PPP</h1>
     <div class="card">
@@ -23,4 +28,7 @@
 </button>
     </div>
   </div>
+
+</div>
+</div>
   
