--- a/src/app/features/coordinador/registrar-constancia/consultar-registrar/consultar-registrar.component.html
+++ b/src/app/features/coordinador/registrar-constancia/consultar-registrar/consultar-registrar.component.html
@@ -1,3 +1,7 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
 <div class="container">
     <h1>Registrar Constancia</h1>
   
@@ -40,4 +44,5 @@
       </div>
     </div>
   </div>
-  
+</div>
+</div>
