--- a/src/app/features/coordinador/registrar-constancia/registrar-constancia-ppp/registrar-constancia-ppp.component.html
+++ b/src/app/features/coordinador/registrar-constancia/registrar-constancia-ppp/registrar-constancia-ppp.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Registrar Constancia</h1>
     <h2>Datos Estudiante:</h2>
@@ -17,3 +22,6 @@
       <button class="aceptar" (click)="aceptar()">Aceptar</button>
     </div>
   </div>
+
+</div>
+</div>
