--- a/src/app/features/coordinador/validar-docs/consultar-validar/consultar-docs-desarrollo/validar-coordinador-desarrollo.component.html
+++ b/src/app/features/coordinador/validar-docs/consultar-validar/consultar-docs-desarrollo/validar-coordinador-desarrollo.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
+
 <div class="container">
     <h1>Solicitud de Documentos Desarrollo PPP</h1>
   
@@ -42,4 +47,5 @@
       </a>
     </div>
   </div>
-  
+</div>
+</div>
