--- a/src/app/features/coordinador/validar-docs/validar-docs-inicio/validar-docs-inicio.component.html
+++ b/src/app/features/coordinador/validar-docs/validar-docs-inicio/validar-docs-inicio.component.html
@@ -1,20 +1,26 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-coordinador></app-sidebar-coordinador>
+  <div class="content">
 <div class="container">
-  <h1>Solicitud Documentos Inicio PPP</h1>
+  <h1>Validar Documentos Inicio</h1>
   <h2>Datos Estudiante:</h2>
   <div class="info-section">
-    <p><strong>Estudiante:</strong> {{ estudiante.nombre }}</p>
-    <p><strong>DNI:</strong> {{ estudiante.dni }}</p>
-    <p><strong>Programa de estudio por plan:</strong> {{ estudiante.programa }}</p>
-    <p><strong>Plan:</strong> {{ estudiante.plan }}</p>
-    <p><strong>Línea de trabajo:</strong> {{ estudiante.lineaTrabajo }}</p>
-    <p><strong>Dirección de domicilio:</strong> {{ estudiante.direccion }}</p>
-    <p><strong>Código:</strong> {{ estudiante.codigo }}</p>
-    <p><strong>Correo:</strong> {{ estudiante.correo }}</p>
-    <p><strong>Teléfono:</strong> {{ estudiante.telefono }}</p>
+    <p><strong>Estudiante:</strong> {{ ppp.matricula.estudiante.persona.nombre }}</p>
+    <p><strong>DNI:</strong> {{ ppp.matricula.estudiante.persona.dni }}</p>
+    <p><strong>Programa de estudio por plan:</strong> {{ ppp.matricula.plan_carrera.carrera.nombre }}</p>
+    <p><strong>Plan:</strong> {{ ppp.matricula.plan_carrera.plan.nombre }}</p>
+    <p><strong>Línea de trabajo:</strong> {{ ppp.linea_carrera.nombre }}</p>
+    <p><strong>Dirección de domicilio:</strong> {{ ppp.matricula.estudiante.persona.direccion }}</p>
+    <p><strong>Código:</strong> {{ ppp.matricula.estudiante.codigo }}</p>
+    <p><strong>Correo:</strong> {{ ppp.matricula.estudiante.persona.correo }}</p>
+    <p><strong>Teléfono:</strong> {{ ppp.matricula.estudiante.persona.telefono }}</p>
   </div>
   <div class="buttons">
     <button class="volver" (click)="volver()">Volver</button>
     <button class="aceptar" (click)="aceptar()">Aceptar</button>
     <button class="rechazar" (click)="rechazar()">Rechazar</button>
   </div>
+</div>
+</div>
 </div>
