casi todo, sidebas, falta accesos con roles

--- a/src/app/features/supervisor/consultar-registrar-evaluaciones/consultar-registrar-evaluaciones.component.html
+++ b/src/app/features/supervisor/consultar-registrar-evaluaciones/consultar-registrar-evaluaciones.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-supervisor></app-sidebar-supervisor>
+  <div class="content">
+
 <div class="container">
     <h1>Registrar Evaluacion</h1>
   
@@ -36,4 +41,6 @@
       <p>No se encontraron registros de PPP.</p>
     </div>
   </div>
+</div>
+</div>
   
