--- a/src/app/features/supervisor/registrar-evaluaciones/registrar-evaluaciones.component.html
+++ b/src/app/features/supervisor/registrar-evaluaciones/registrar-evaluaciones.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="layout">
+  <app-sidebar-supervisor></app-sidebar-supervisor>
+  <div class="content">
+
 <div class="container">
     <h1>Registrar Evaluaciones</h1>
     <button class="back-btn" (click)="volver()">Volver</button>
@@ -28,4 +33,6 @@
       <button class="save-btn" (click)="guardarNota()">Guardar</button>
     </div>
   </div>
+</div>
+</div>
   
