--- a/src/app/features/estudiante/consultar-practica/consultar-estudiante.component.css
+++ b/src/app/features/estudiante/consultar-practica/consultar-estudiante.component.css
@@ -185,3 +185,20 @@ h1 {
     padding: 15px;
   }
 }
+.chart-container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.chart-label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
