--- a/src/app/features/registrar-docs-desarrollo/registrar-docs-desarrollo.component.html
+++ b/src/app/features/registrar-docs-desarrollo/registrar-docs-desarrollo.component.html
@@ -5,7 +5,7 @@
 
     <div class="container">
       <div class="header">
-        <h1>Registrar Documentos de Inicio</h1>
+        <h1>Registrar Documentos de Desarrollo</h1>
       </div>
 
       <div class="content">
