--- a/src/app/features/coordinador/estadistica/estadistica.component.css
+++ b/src/app/features/coordinador/estadistica/estadistica.component.css
@@ -1,3 +1,4 @@
+
 /* Layout principal */
 .layout {
   display: flex;
@@ -33,14 +34,14 @@ h1 {
   color: #007bff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .layout {
     flex-direction: column;
   }
 
   app-sidebar {
     flex: 0 0 auto;
-    width: 100%;
+    width: 00%;
     height: auto;
   }
 
@@ -49,3 +50,14 @@ h1 {
     padding: 15px;
   }
 }
+.chart-container {
+  width: 100%; /* Ocupa todo el ancho del contenedor padre */
+  height: 400px; /* Altura fija; puedes usar un porcentaje si prefieres */
+}
+
+@media (max-width: 768px) {
+  .chart-container {
+    height: 300px; /* Ajuste para pantallas más pequeñas */
+  }
+}
+
